fix: footer icons causes scrollbars to appear

--- a/web/src/footer.scss
+++ b/web/src/footer.scss
@@ -20,11 +20,18 @@
     padding-left: 5px;
     padding-right: 5px;
     color: #DDD;
-    transition: all 0.2s ease-in-out;
+    transition: color 0.2s ease-in-out;
+
+    > i {
+      transition: transform 0.2s ease-in-out;
+    }
 
     &:hover {
       color: #FFF;
-      transform: scale(1.2);
+
+      > i {
+        transform: scale(1.2);
+      }
     }
   }
 }
